# indent

./: .ghcid  LICENSE  README.md  indent.cabal
lib/Data/Text/: Indent.hs
src/: Main.hs
