cabal-version: >= 1.10
name:          indent
version:       0.0.0
license:       BSD3
license-file:  LICENSE
author:        Ole Krüger
maintainer:    haskell-indent@vprsm.de
copyright:     (c) Ole Krüger 2018
category:      Text
build-type:    Simple

library
  default-language: Haskell2010
  build-depends:    base, text
  hs-source-dirs:   lib
  exposed-modules:  Data.Text.Indent

  ghc-options: -Wall

  if impl(ghc >= 8)
    ghc-options: -Wno-name-shadowing
  else
    ghc-options: -fno-warn-name-shadowing

executable indent
  default-language: Haskell2010
  build-depends:    base, indent, text, optparse-applicative
  hs-source-dirs:   src
  main-is:          Main.hs
  ghc-options:      -Wall
